Fix(header): Fix the hover of the icons on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -142,10 +142,10 @@
 				margin: 2px;
 				background-size: cover;
 				background-image: url("/assets/images/icon_logo.svg");
-			}
 
-			&:hover .header-logo {
-				background-image: url("/assets/images/icon_logo_hover.svg");
+				&:hover {
+					background-image: url("/assets/images/icon_logo_hover.svg");
+				}
 			}
 
 			.header-list {
@@ -155,10 +155,10 @@
 				margin: 2px;
 				background-size: cover;
 				background-image: url("/assets/images/icon_list.png");
-			}
 
-			&:hover .header-list {
-				background-image: url("/assets/images/icon_list_hover.png");
+				&:hover {
+					background-image: url("/assets/images/icon_list_hover.png");
+				}
 			}
     }
   }
